# photonyx

./: readme.md
bindings/: Cargo.toml
bindings/src/: c.rs  db.rs  lib.rs  validator.rs
core/: Cargo.toml
core/src/: c.rs  http1.rs  lib.rs  main.rs  websocket.rs
core/src/app/: config.rs  config_c.rs  mod.rs  modules.rs  router.rs  router_c.rs  server.rs
core/src/context/: http.rs  http_c.rs  mod.rs
core/src/db/: connection.rs  connection_c.rs  entity_c.rs  mod.rs  model.rs  query_c.rs
core/src/http/: codes.rs  cors.rs  entity.rs  entity_c.rs  mod.rs
core/src/utils/: json_c.rs  log.rs  mod.rs  stream.rs  sync.rs  validator.rs  validator_c.rs
macro/: Cargo.toml
macro/src/: lib.rs
test/: Cargo.toml
test/src/: main.rs
zig-test/: build.zig
zig-test/src/: dcore.zig  root.zig
