[package]
name = "dc-api-core-test"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dc-api-core = { path = "../core" }
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.53"
lazy_static = "1.4.0"
json = "0.12.4"
libloading = "0.8.8"
